--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-8 offset-md-2">    
-      <h4>1. Component Property Binding</h4>
+      <h4>1. Component Property Binding in Angular</h4>
       <hr>        
         <app-game-control (intervalFired)="onIntervalFired($event)"></app-game-control>
     </div>
